tests/suite/analyze/snapshots/suite__analyze__anticipated_expressions__used_on_both_branches.snap
---
source: tests/suite/analyze/anticipated_expressions.rs
assertion_line: 23
expression: anticipated_expressions(function)
---

                                     used_on_both_branches

+--------------------------------------------+     +--------------------------------------------+
|                fallthrough:                |     |                   enter:                   |
| {(ADD (TEMP _b) (CONST 1))}                |     | {(ADD (TEMP _b) (CONST 1))}                |
| (MOVE (TEMP _c) (ADD (TEMP _b) (CONST 1))) |     | (MOVE (TEMP _a) (ADD (TEMP _b) (CONST 1))) |
| {}                                         |     | {(ADD (TEMP _b) (CONST 1))}                |
| (JUMP exit)                                |     | (CJUMP (GEQ (TEMP _a) (TEMP _b)) branch)   |
| {}                                         | <-- | {(ADD (TEMP _b) (CONST 1))}                |
+--------------------------------------------+     +--------------------------------------------+
  |                                                  |
  |                                                  |
  |                                                  v
  |                                                +--------------------------------------------+
  |                                                |                  branch:                   |
  |                                                | {(ADD (TEMP _b) (CONST 1))}                |
  |                                                | (MOVE (TEMP _d) (ADD (TEMP _b) (CONST 1))) |
  |                                                | {}                                         |
  |                                                | (JUMP exit)                                |
  |                                                | {}                                         |
  |                                                +--------------------------------------------+
  |                                                  |
  |                                                  |
  |                                                  v
  |                                                +--------------------------------------------+
  |                                                |                   exit:                    |
  +----------------------------------------------> | {}                                         |
                                                   +--------------------------------------------+

