tests/suite/analyze/snapshots/suite__analyze__anticipated_expressions__used_on_one_branch.snap
---
source: tests/suite/analyze/anticipated_expressions.rs
assertion_line: 37
expression: anticipated_expressions(function)
---

                                       used_on_one_branch

+--------------------------------------------+     +--------------------------------------------+
|                fallthrough:                |     |                   enter:                   |
| {(ADD (TEMP _b) (CONST 1))}                |     | {(ADD (TEMP _b) (CONST 1))}                |
| (MOVE (TEMP _c) (ADD (TEMP _b) (CONST 1))) |     | (MOVE (TEMP _a) (ADD (TEMP _b) (CONST 1))) |
| {}                                         |     | {}                                         |
| (JUMP exit)                                |     | (CJUMP (GEQ (TEMP _a) (TEMP _b)) branch)   |
| {}                                         | <-- | {}                                         |
+--------------------------------------------+     +--------------------------------------------+
  |                                                  |
  |                                                  |
  |                                                  v
  |                                                +--------------------------------------------+
  |                                                |                  branch:                   |
  |                                                | {(ADD (TEMP _b) (CONST 2))}                |
  |                                                | (MOVE (TEMP _d) (ADD (TEMP _b) (CONST 2))) |
  |                                                | {}                                         |
  |                                                | (JUMP exit)                                |
  |                                                | {}                                         |
  |                                                +--------------------------------------------+
  |                                                  |
  |                                                  |
  |                                                  v
  |                                                +--------------------------------------------+
  |                                                |                   exit:                    |
  +----------------------------------------------> | {}                                         |
                                                   +--------------------------------------------+

